# uwufetch-rs

./: Cargo.toml  README.md
res/: amogos.sixel  android.sixel  arch.sixel  arcolinux.sixel  artix.sixel  debian.sixel  devuan.sixel  endeavouros.sixel  fedora.sixel  gentoo.sixel  guix.sixel  linuxmint.sixel  manjaro-arm.sixel  neon.sixel  nixos.sixel  opensuse-leap.sixel  pop.sixel  slackware.sixel  solus.sixel  ubuntu.sixel  unknown.sixel  void.sixel
src/: assets.rs  cache.rs  config.rs  display.rs  info.rs  main.rs  uwufy.rs
