[package]
name = "uwufetch"
version = "0.1.0"
edition = "2021"
authors = ["UwUfetch Contributors"]
description = "A system information fetcher written in Rust with uwu"
license = "GPL-3.0-or-later"
repository = "https://github.com/uwufetch/uwufetch-rust"

[dependencies]
sysinfo = "0.31"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.28"
home = "0.5"
libc = "0.2"
once_cell = "1.19"
regex = "1.10"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_System_SystemInformation", "Win32_System_SystemServices", "Win32_Foundation"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.24"

[profile.release]
lto = true
codegen-units = 1
strip = true
