[package]
name = "uwufetch"
version = "0.1.0"
edition = "2021"
authors = ["UwUfetch Contributors"]
description = "A system information fetcher written in Rust with uwu"
license = "GPL-3.0-or-later"
repository = "https://github.com/uwufetch/uwufetch-rust"

[dependencies]
sysinfo = "0.37"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
home = "0.5"
libc = "0.2"
anyhow = "1.0"
once_cell = "1.21"
regex = "1.11"
aho-corasick = "1.1"
owo-colors = "4.2.2"
rust-embed = { version = "8.7.2", features = ["compression"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.0", features = ["Win32_Foundation"] }
windows = { version = "0.62", features = [
    "Win32_System_SystemInformation",
    "Win32_System_SystemServices",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Registry",
    "Win32_System_WindowsProgramming",
] }


[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.10"
core-graphics = "0.25"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
strip = true
